tests/NormalTests/paczka1/small_fuzzy/97563596.err
Error in line 9: ebx A611 44,5
Error in line 13: 7phNI S131 32,2
